# swagger_server/models/__init__.py
@@ -8,16 +8,22 @@ from swagger_server.models.data_delivery_mechanism import DataDeliveryMechanism
 from swagger_server.models.data_delivery_mode import DataDeliveryMode
 from swagger_server.models.data_job_id import DataJobId
 from swagger_server.models.data_job_info import DataJobInfo
+from swagger_server.models.data_job_info_data_request import DataJobInfoDataRequest
 from swagger_server.models.delivery_schema import DeliverySchema
 from swagger_server.models.dme_type_definition import DmeTypeDefinition
 from swagger_server.models.dme_type_id import DmeTypeId
 from swagger_server.models.dme_type_id_struct import DmeTypeIdStruct
 from swagger_server.models.dme_type_related_capabilities import DmeTypeRelatedCapabilities
+from swagger_server.models.fqdn import Fqdn
 from swagger_server.models.interface_description import InterfaceDescription
+from swagger_server.models.ipv4_addr import Ipv4Addr
+from swagger_server.models.ipv6_addr import Ipv6Addr
 from swagger_server.models.kafka_delivery_configuration import KafkaDeliveryConfiguration
 from swagger_server.models.metadata import Metadata
+from swagger_server.models.o_auth_grant_type import OAuthGrantType
 from swagger_server.models.one_of_data_delivery_mechanism import OneOfDataDeliveryMechanism
 from swagger_server.models.one_of_interface_description import OneOfInterfaceDescription
+from swagger_server.models.port import Port
 from swagger_server.models.problem_details import ProblemDetails
 from swagger_server.models.registration_id import RegistrationId
 from swagger_server.models.schema_types import SchemaTypes
