# swagger_server/models/data_job_info.py
@@ -6,6 +6,7 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
+from swagger_server.models.data_job_info_data_request import DataJobInfoDataRequest  # noqa: F401,E501
 from swagger_server import util
 
 
@@ -14,19 +15,19 @@ class DataJobInfo(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, data_access_method: str=None, data_request: object=None, data_access_uri: str=None):  # noqa: E501
+    def __init__(self, data_access_method: str=None, data_request: DataJobInfoDataRequest=None, data_access_uri: str=None):  # noqa: E501
         """DataJobInfo - a model defined in Swagger
 
         :param data_access_method: The data_access_method of this DataJobInfo.  # noqa: E501
         :type data_access_method: str
         :param data_request: The data_request of this DataJobInfo.  # noqa: E501
-        :type data_request: object
+        :type data_request: DataJobInfoDataRequest
         :param data_access_uri: The data_access_uri of this DataJobInfo.  # noqa: E501
         :type data_access_uri: str
         """
         self.swagger_types = {
             'data_access_method': str,
-            'data_request': object,
+            'data_request': DataJobInfoDataRequest,
             'data_access_uri': str
         }
 
@@ -74,24 +75,22 @@ class DataJobInfo(Model):
         self._data_access_method = data_access_method
 
     @property
-    def data_request(self) -> object:
+    def data_request(self) -> DataJobInfoDataRequest:
         """Gets the data_request of this DataJobInfo.
 
-        Data requested  # noqa: E501
 
         :return: The data_request of this DataJobInfo.
-        :rtype: object
+        :rtype: DataJobInfoDataRequest
         """
         return self._data_request
 
     @data_request.setter
-    def data_request(self, data_request: object):
+    def data_request(self, data_request: DataJobInfoDataRequest):
         """Sets the data_request of this DataJobInfo.
 
-        Data requested  # noqa: E501
 
         :param data_request: The data_request of this DataJobInfo.
-        :type data_request: object
+        :type data_request: DataJobInfoDataRequest
         """
 
         self._data_request = data_request
