# swagger_server/models/data_job_info_data_request.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class DataJobInfoDataRequest(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, data_type: str=None, data_category: str=None):  # noqa: E501
+        """DataJobInfoDataRequest - a model defined in Swagger
+
+        :param data_type: The data_type of this DataJobInfoDataRequest.  # noqa: E501
+        :type data_type: str
+        :param data_category: The data_category of this DataJobInfoDataRequest.  # noqa: E501
+        :type data_category: str
+        """
+        self.swagger_types = {
+            'data_type': str,
+            'data_category': str
+        }
+
+        self.attribute_map = {
+            'data_type': 'dataType',
+            'data_category': 'dataCategory'
+        }
+        self._data_type = data_type
+        self._data_category = data_category
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DataJobInfoDataRequest':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DataJobInfo_dataRequest of this DataJobInfoDataRequest.  # noqa: E501
+        :rtype: DataJobInfoDataRequest
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data_type(self) -> str:
+        """Gets the data_type of this DataJobInfoDataRequest.
+
+        Type of data requested  # noqa: E501
+
+        :return: The data_type of this DataJobInfoDataRequest.
+        :rtype: str
+        """
+        return self._data_type
+
+    @data_type.setter
+    def data_type(self, data_type: str):
+        """Sets the data_type of this DataJobInfoDataRequest.
+
+        Type of data requested  # noqa: E501
+
+        :param data_type: The data_type of this DataJobInfoDataRequest.
+        :type data_type: str
+        """
+
+        self._data_type = data_type
+
+    @property
+    def data_category(self) -> str:
+        """Gets the data_category of this DataJobInfoDataRequest.
+
+        Category of data requested  # noqa: E501
+
+        :return: The data_category of this DataJobInfoDataRequest.
+        :rtype: str
+        """
+        return self._data_category
+
+    @data_category.setter
+    def data_category(self, data_category: str):
+        """Sets the data_category of this DataJobInfoDataRequest.
+
+        Category of data requested  # noqa: E501
+
+        :param data_category: The data_category of this DataJobInfoDataRequest.
+        :type data_category: str
+        """
+
+        self._data_category = data_category
